clusters/pibox/apps/photoprism/interceptor-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keda-interceptor-proxy
  namespace: photoprism
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - name: proxy
      port: 8080
      protocol: TCP
