clusters/pibox/apps/photoprism/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  namespace: photoprism
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-fail2ban@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: my-traefik
  rules:
    - host: photos.paas.lsedlar.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-interceptor-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - photos.paas.lsedlar.cz
      secretName: photoprism-cert
